--- a/rapid-note/src/components/Login.css
+++ b/rapid-note/src/components/Login.css
@@ -1,5 +1,4 @@
 @media only screen and (min-device-width: 810px) {
-
   .App {
     text-align: center;
   }
@@ -10,37 +9,45 @@
     margin-top: -25vmin;
   }
   .Content-btn-login {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  align-items: center;
-  margin-left: 7vmin;
-}
-.BtnLogin {
-  height: 11vmin;
-  width: 40vmin;
-  font-family: "Sanchez";
-  font-size: calc(16px + 2vmin);
-  background-color: white;
-  border-radius: 20px;
-  border: none;
-  cursor: pointer;
-  color: black;
-  margin: 4vmin;
-}
-.BtnGoogle {
-  height: 11vmin;
-  width: 40vmin;
-  font-family: "Sanchez";
-  font-size: calc(16px + 2vmin);
-  background-color: white;
-  border-radius: 20px;
-  border: none;
-  cursor: pointer;
-  color: black;
-}
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    margin-left: 7vmin;
+  }
+  .BtnLogin {
+    height: 11vmin;
+    width: 40vmin;
+    font-family: "Sanchez";
+    font-size: calc(16px + 2vmin);
+    background-color: white;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    color: black;
+    margin: 4vmin;
+  }
+  .BtnGoogle {
+    height: 11vmin;
+    width: 40vmin;
+    font-family: "Sanchez";
+    font-size: calc(16px + 2vmin);
+    background-color: white;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    color: black;
+  }
+  .App-link {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: calc(20px + 2vmin);
+    color: black;
+    padding: 4vmin 0vmin 0vmin 0vmin;
+    margin-left: 1vmin;
+  }
 }
 
 @media only screen and (min-device-width: 1180px) {
-
 }
