--- a/rapid-note/src/components/Home.css
+++ b/rapid-note/src/components/Home.css
@@ -5,11 +5,11 @@
 }
 .App-logotext {
   width: 70vmin;
-  margin-left: 14vmin;
+  margin-left: 7vmin;
   margin-top: -45vmin;
 }
 .App-logo {
-  margin-left: 24vmin;
+  margin-left: 16vmin;
   width: 50vmin;
   animation: App-logo-spin infinite 2s linear;
   margin-top: -10vmin;
@@ -19,7 +19,7 @@
   font-family: 'Sanchez';
   font-size: calc(18px + 2vmin);
   margin-top: 4vmin;
-  margin-left: 10vmin;
+  margin-left: 4vmin;
 }
 .Content-home {
   background-color: #92daee;
@@ -36,13 +36,13 @@
 .Content-btn {
   background-color: #92daee ;
   margin-top: -52vmin;
-  margin-left: 32vmin;
+  margin-left: 23vmin;
 }
 .Btn-home {
   height: 11vmin;
-  width: 37vmin;
+  width: 40vmin;
   font-family: 'Sanchez';
-  font-size: calc(20px + 2vmin);
+  font-size: calc(20px + 3vmin);
   background-color: white;
   border-radius: 20px;
   border: none;
@@ -52,13 +52,13 @@
 .Content-link {
   margin-top: 1vmin;
   background-color: #92daee;
-  margin-right: 0vmin;
+  margin-right: 14vmin;
 }
 .Link-home {
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-size: calc(20px + 2vmin);
+  font-size: calc(20px + 3vmin);
   color: black;
   padding: 2vmin 2vmin 2vmin 2vmin;
 }
@@ -66,23 +66,23 @@
 /*For tablet horizontal*/
 @media only screen and (min-device-width: 1180px)  {
 .App-logotext {
-  margin-left: 25vmin;
+  margin-left: 18vmin;
   height: 23vmin;
-  width: 90vmin;
+  width: 85vmin;
   margin-top: -50vmin;
 }
 .Title-home {
   font-size: calc(28px + 2vmin);
   color: #15181a;
   padding: 0px 0px 0px 0px;
-  margin-left: 25vmin;
+  margin-left: 12vmin;
   margin-top: -55vmin;
 }
 .App-logo {
   animation: App-logo-spin infinite 2s linear;
   margin-top: -0vmin;
   width: 55vmin;
-  margin-left: 10vmin;
+  margin-left: -2vmin;
 }
 .Content-home {
   background-color: #92daee;
@@ -97,19 +97,30 @@
 }
 .Content-btn {
   background-color: #92daee;
-  margin-top: -45vmin;
-  margin-left: 65vmin;
+  margin-top: -50vmin;
+  margin-left: 56vmin;
+}
+.Btn-home {
+  height: 11vmin;
+  width: 50vmin;
+  font-family: 'Sanchez';
+  font-size: calc(20px + 4vmin);
+  background-color: white;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  color: black;
 }
 .Content-link {
-  margin-top: 5vmin;
+  margin-top: 0vmin;
   background-color: #92daee;
-  margin-left: 25vmin;
+  margin-left: 30vmin;
 }
 .Link-home {
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-size: calc(20px + 2vmin);
+  font-size: calc(20px + 3vmin);
   color: black;
   padding: 2vmin 2vmin 2vmin 2vmin;
 }
