--- a/rapid-note/src/components/Header.css
+++ b/rapid-note/src/components/Header.css
@@ -9,30 +9,31 @@
     background-color: white;
   }
   .LogoHeader {
-    width: 97vw;
+    width: 100vw;
     height: 14vh;
     margin-top: 1vmin;
-    margin-left: -4vmin;
+    margin-left: 3.5vmin;
   }
   h3 {
-    margin-left: 4vmin;
+    margin-left: 11vmin;
     margin-top: 0vmin;
     font-family: 'apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;';
-    font-size: calc(14px + 2vmin);
+    font-size: calc(16px + 2vmin);
   }
   .Content-BtnLogOut {
     margin-top: -8vmin;
-    margin-left: 49vmin;
+    margin-left: 60vmin;
   }
   .BtnLogOut{
   height: 1vmin;
   width: 50vmin;
   font-family: 'apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;';
-  font-size: calc(14px + 2vmin);
+  font-size: calc(16px + 2vmin);
   background-color: white;
   border-radius: 20px;
   border: none;
   cursor: pointer;
   color: blue;
+  padding: 0px 0px 0px 0px;
   }
 }
