--- a/rapid-note/src/components/Register.css
+++ b/rapid-note/src/components/Register.css
@@ -3,15 +3,15 @@
     text-align: center;
   }
   .Logotext-register {
-    width: 85vmin;
+    width: 95vmin;
     height: 31vmin;
-    margin-right: 3vmin;
+    margin-left: 4vmin;
     margin-top: -15vmin;
   }
   .cat-register {
     width: 25vmin;
     height: 35vmin;
-    margin-right: 10vmin;
+    margin-left: 0vmin;
     margin-top: -12vmin;
   }
   .Content-register {
@@ -36,7 +36,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin-right: 6vmin;
+    margin-right: 0vmin;
     margin-top: -5vmin;
   }
   input[type="email"],
@@ -58,7 +58,7 @@
     margin-top: 5vmin;
     margin-left: 12vmin;
   }
-  button {
+  .btnRegister {
     height: 11vmin;
     width: 40vmin;
     font-family: "Sanchez";
